--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#111827" />
     <meta name="msapplication-TileColor" content="#111827" />
-
+    <meta name="google-site-verification" content="Hmyr7kGXw9ssAITz3CSizw1Q1DdpxElVXE7Q6YAMaS4" />
     <!-- Fonts Optimization -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
