add google analytics

--- a/index.html
+++ b/index.html
@@ -1,49 +1,62 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    
-    <!-- Favicon & App Icons -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 
-    <!-- Viewport -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8" />
 
-    <!-- Primary Meta Tags -->
-    <title>Amir Ali | Full Stack Developer Portfolio</title>
-    <meta name="description" content="Amir Ali is a Full Stack Developer specializing in React, Node.js, and modern web technologies. Explore projects, skills, and experience in building scalable and user-friendly solutions." />
-    <meta name="keywords" content="Amir Ali, full stack developer, react developer, node.js developer, web developer, portfolio, JavaScript, TypeScript, frontend, backend" />
-    <meta name="author" content="Amir Ali" />
+  <!-- Favicon & App Icons -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Amir Ali | Full Stack Developer Portfolio" />
-    <meta property="og:description" content="Full Stack Developer specializing in React, Node.js, and modern web technologies. Building scalable solutions and exceptional user experiences." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://amirali.dev" />
-    <meta property="og:image" content="https://amirali.dev/og-image.png" />
+  <!-- Viewport -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Amir Ali | Full Stack Developer Portfolio" />
-    <meta name="twitter:description" content="Experienced Full Stack Developer specializing in React, Node.js, and modern web technologies." />
-    <meta name="twitter:image" content="https://amirali.dev/og-image.png" />
+  <!-- Primary Meta Tags -->
+  <title>Amir Ali | Full Stack Developer Portfolio</title>
+  <meta name="description"
+    content="Amir Ali is a Full Stack Developer specializing in React, Node.js, and modern web technologies. Explore projects, skills, and experience in building scalable and user-friendly solutions." />
+  <meta name="keywords"
+    content="Amir Ali, full stack developer, react developer, node.js developer, web developer, portfolio, JavaScript, TypeScript, frontend, backend" />
+  <meta name="author" content="Amir Ali" />
 
-    <!-- Additional SEO Enhancements -->
-    <link rel="canonical" href="https://amirali.dev" />
-    <meta name="robots" content="index, follow" />
-    <meta name="theme-color" content="#111827" />
-    <meta name="msapplication-TileColor" content="#111827" />
-    <meta name="google-site-verification" content="Hmyr7kGXw9ssAITz3CSizw1Q1DdpxElVXE7Q6YAMaS4" />
-    <!-- Fonts Optimization -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Amir Ali | Full Stack Developer Portfolio" />
+  <meta property="og:description"
+    content="Full Stack Developer specializing in React, Node.js, and modern web technologies. Building scalable solutions and exceptional user experiences." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://amirali.dev" />
+  <meta property="og:image" content="https://amirali.dev/og-image.png" />
 
-    <!-- Schema.org Markup for Personal Portfolio -->
-    <script type="application/ld+json">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Amir Ali | Full Stack Developer Portfolio" />
+  <meta name="twitter:description"
+    content="Experienced Full Stack Developer specializing in React, Node.js, and modern web technologies." />
+  <meta name="twitter:image" content="https://amirali.dev/og-image.png" />
+
+  <!-- Additional SEO Enhancements -->
+  <link rel="canonical" href="https://amirali.dev" />
+  <meta name="robots" content="index, follow" />
+  <meta name="theme-color" content="#111827" />
+  <meta name="msapplication-TileColor" content="#111827" />
+  <meta name="google-site-verification" content="Hmyr7kGXw9ssAITz3CSizw1Q1DdpxElVXE7Q6YAMaS4" />
+  <!-- Fonts Optimization -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PHFB3W5VDS"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-PHFB3W5VDS');
+  </script>
+  <!-- Schema.org Markup for Personal Portfolio -->
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Person",
@@ -62,9 +75,11 @@
       }
     }
     </script>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
